// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio List Item (unit tests) when passing required props and \`checked\` true should match the snapshot 1`] = `
<kv-radio-list-item checked="" label="K3S" option-id="k3s" size="large">
  <template shadowrootmode="open">
    <div class="radio-list-item-container radio-list-item-container--checked">
      <slot name="header"></slot>
      <div class="content content--size-large">
        <kv-radio checked="" size="small"></kv-radio>
        <div class="info">
          <div class="label">
            <slot name="label">
              K3S
            </slot>
          </div>
          <slot name="additional-info"></slot>
        </div>
      </div>
    </div>
  </template>
</kv-radio-list-item>
`;

exports[`Radio List Item (unit tests) when passing required props and \`disabled\` true should match the snapshot 1`] = `
<kv-radio-list-item disabled="" label="K3S" option-id="k3s" size="large">
  <template shadowrootmode="open">
    <div class="radio-list-item-container radio-list-item-container--disabled">
      <slot name="header"></slot>
      <div class="content content--size-large">
        <kv-radio disabled="" size="small"></kv-radio>
        <div class="info">
          <div class="label">
            <slot name="label">
              K3S
            </slot>
          </div>
          <slot name="additional-info"></slot>
        </div>
      </div>
    </div>
  </template>
</kv-radio-list-item>
`;

exports[`Radio List Item (unit tests) when passing required props and a description should match the snapshot 1`] = `
<kv-radio-list-item description="Check the [documentation](https://docs.kelvininc.com/4.10.2/) here." label="K3S" option-id="k3s" size="large">
  <template shadowrootmode="open">
    <div class="radio-list-item-container">
      <slot name="header"></slot>
      <div class="content content--size-large">
        <kv-radio size="small"></kv-radio>
        <div class="info">
          <div class="label">
            <slot name="label">
              K3S
            </slot>
          </div>
          <div class="description">
            Check the
            <kv-link href="https://docs.kelvininc.com/4.10.2/" label="documentation" target="_blank"></kv-link>
            here.
          </div>
          <slot name="additional-info"></slot>
        </div>
      </div>
    </div>
  </template>
</kv-radio-list-item>
`;

exports[`Radio List Item (unit tests) when passing required props should match the snapshot 1`] = `
<kv-radio-list-item label="K3S" option-id="k3s" size="large">
  <template shadowrootmode="open">
    <div class="radio-list-item-container">
      <slot name="header"></slot>
      <div class="content content--size-large">
        <kv-radio size="small"></kv-radio>
        <div class="info">
          <div class="label">
            <slot name="label">
              K3S
            </slot>
          </div>
          <slot name="additional-info"></slot>
        </div>
      </div>
    </div>
  </template>
</kv-radio-list-item>
`;
